Fix wrong font on Windows

--- a/reach/web/src/css/results.css
+++ b/reach/web/src/css/results.css
@@ -49,7 +49,7 @@
 }
 
 th {
-  font-family: "Helvetica Neue";
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 0.75rem;
   font-weight: bold;
   font-stretch: normal;
